Major cleanup of dependencies, also bump dependencies version

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ sel_ldr*
 #ignore external deps
 external_deps/*
 !external_deps/build.sh
+!external_deps/cygtar.py
 
 #never ignore these in subdirectories by accident
 !.gitattributes
