--- a/pkg/unvanquished_src.dpkdir/configs/beacons/timer.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/timer.beacon.cfg
@@ -2,5 +2,5 @@
 
 humanName  "Timer"
 text       "Timer"
-icon       "gfx/2d/beacon-pointer"
+icon       "gfx/2d/beacon-timer"
 sound      "sound/feedback/beacon.ogg"
