Show a different icon for the "Heal here!" beacon if it points to a Booster.

--- a/main/configs/beacons/health.beacon.cfg
+++ b/main/configs/beacons/health.beacon.cfg
@@ -2,4 +2,5 @@
 
 text       "Heal here!"
 icon       "gfx/2d/beacon-health"
+altIcon    "gfx/2d/beacon-health-alt"
 sound      "sound/feedback/beacon.ogg"
