--- a/pkg/unvanquished_src.dpkdir/configs/beacons/health.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/health.beacon.cfg
@@ -2,4 +2,5 @@
 
 text       "Heal here!"
 icon       "gfx/2d/beacon-health"
+altIcon    "gfx/2d/beacon-health-alt"
 sound      "sound/feedback/beacon.ogg"
