--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -837,7 +837,7 @@ set( CGAMEASMLIST
 )
 
 set( GAMELIST
-  ${GAMELOGIC_DIR}/game/g_main.c #keep it first because vmMain must be the first function compiled in qvms
+  ${GAMELOGIC_DIR}/game/g_main.cpp
   ${GAMELOGIC_DIR}/shared/bg_misc.c
   ${GAMELOGIC_DIR}/shared/bg_parse.c
   ${GAMELOGIC_DIR}/shared/bg_pmove.c
@@ -849,39 +849,39 @@ set( GAMELIST
   ${GAMELOGIC_DIR}/shared/CommonProxies.cpp
   ${GAMELOGIC_DIR}/shared/CommonProxies.h
   ${GAMELOGIC_DIR}/shared/VMMain.h
-  ${GAMELOGIC_DIR}/game/g_active.c
-  ${GAMELOGIC_DIR}/game/g_client.c
-  ${GAMELOGIC_DIR}/game/g_cmds.c
-  ${GAMELOGIC_DIR}/game/g_combat.c
-  ${GAMELOGIC_DIR}/game/g_confidence.c
-  ${GAMELOGIC_DIR}/game/g_entities.c
-  ${GAMELOGIC_DIR}/game/g_physics.c
-  ${GAMELOGIC_DIR}/game/g_buildable.c
-  ${GAMELOGIC_DIR}/game/g_missile.c
-  ${GAMELOGIC_DIR}/game/g_session.c
-  ${GAMELOGIC_DIR}/game/g_spawn_afx.c
-  ${GAMELOGIC_DIR}/game/g_spawn_ctrl.c
-  ${GAMELOGIC_DIR}/game/g_spawn_fx.c
-  ${GAMELOGIC_DIR}/game/g_spawn_game.c
-  ${GAMELOGIC_DIR}/game/g_spawn_generic.c
-  ${GAMELOGIC_DIR}/game/g_spawn_gfx.c
-  ${GAMELOGIC_DIR}/game/g_spawn_mover.c
-  ${GAMELOGIC_DIR}/game/g_spawn_position.c
-  ${GAMELOGIC_DIR}/game/g_spawn_sensor.c
-  ${GAMELOGIC_DIR}/game/g_spawn_shared.c
-  ${GAMELOGIC_DIR}/game/g_spawn.c
-  ${GAMELOGIC_DIR}/game/g_svcmds.c
-  ${GAMELOGIC_DIR}/game/g_team.c
-  ${GAMELOGIC_DIR}/game/g_utils.c
-  ${GAMELOGIC_DIR}/game/g_maprotation.c
-  ${GAMELOGIC_DIR}/game/g_weapon.c
-  ${GAMELOGIC_DIR}/game/g_admin.c
-  ${GAMELOGIC_DIR}/game/g_namelog.c
-  ${GAMELOGIC_DIR}/game/g_bot.c
-  ${GAMELOGIC_DIR}/game/g_bot_ai.c
-  ${GAMELOGIC_DIR}/game/g_bot_nav.c
-  ${GAMELOGIC_DIR}/game/g_bot_parse.c
-  ${GAMELOGIC_DIR}/game/g_bot_util.c
+  ${GAMELOGIC_DIR}/game/g_active.cpp
+  ${GAMELOGIC_DIR}/game/g_client.cpp
+  ${GAMELOGIC_DIR}/game/g_cmds.cpp
+  ${GAMELOGIC_DIR}/game/g_combat.cpp
+  ${GAMELOGIC_DIR}/game/g_confidence.cpp
+  ${GAMELOGIC_DIR}/game/g_entities.cpp
+  ${GAMELOGIC_DIR}/game/g_physics.cpp
+  ${GAMELOGIC_DIR}/game/g_buildable.cpp
+  ${GAMELOGIC_DIR}/game/g_missile.cpp
+  ${GAMELOGIC_DIR}/game/g_session.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_afx.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_ctrl.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_fx.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_game.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_generic.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_gfx.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_mover.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_position.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_sensor.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn_shared.cpp
+  ${GAMELOGIC_DIR}/game/g_spawn.cpp
+  ${GAMELOGIC_DIR}/game/g_svcmds.cpp
+  ${GAMELOGIC_DIR}/game/g_team.cpp
+  ${GAMELOGIC_DIR}/game/g_utils.cpp
+  ${GAMELOGIC_DIR}/game/g_maprotation.cpp
+  ${GAMELOGIC_DIR}/game/g_weapon.cpp
+  ${GAMELOGIC_DIR}/game/g_admin.cpp
+  ${GAMELOGIC_DIR}/game/g_namelog.cpp
+  ${GAMELOGIC_DIR}/game/g_bot.cpp
+  ${GAMELOGIC_DIR}/game/g_bot_ai.cpp
+  ${GAMELOGIC_DIR}/game/g_bot_nav.cpp
+  ${GAMELOGIC_DIR}/game/g_bot_parse.cpp
+  ${GAMELOGIC_DIR}/game/g_bot_util.cpp
   ${GAMELOGIC_DIR}/game/g_cm_world.cpp
   ${GAMELOGIC_DIR}/game/g_cm_world.h
   ${ENGINE_DIR}/server/g_api.h
