--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -290,39 +290,41 @@ else()
 
     # Use gcc-ar and gcc-ranlib instead of ar and ranlib so that we can use
     # slim LTO objects. This requires a recent version of GCC and binutils.
-    if( USE_SLIM_LTO )
-      string(REGEX MATCH "^([0-9]+.[0-9]+)" _version
-         "${CMAKE_CXX_COMPILER_VERSION}")
-      get_filename_component(COMPILER_BASENAME "${CMAKE_C_COMPILER}" NAME)
-      if (COMPILER_BASENAME MATCHES "^(.+-)g?cc(-[0-9]+\\.[0-9]+\\.[0-9]+)?(\\.exe)?$")
-        set(TOOLCHAIN_PREFIX ${CMAKE_MATCH_1})
+    if( ${CMAKE_CXX_COMPILER_ID} STREQUAL GNU )
+      if( USE_SLIM_LTO )
+        string(REGEX MATCH "^([0-9]+.[0-9]+)" _version
+           "${CMAKE_CXX_COMPILER_VERSION}")
+        get_filename_component(COMPILER_BASENAME "${CMAKE_C_COMPILER}" NAME)
+        if (COMPILER_BASENAME MATCHES "^(.+-)g?cc(-[0-9]+\\.[0-9]+\\.[0-9]+)?(\\.exe)?$")
+          set(TOOLCHAIN_PREFIX ${CMAKE_MATCH_1})
+        endif()
+
+        find_program(GCC_AR NAMES
+          "${TOOLCHAIN_PREFIX}gcc-ar"
+          "${TOOLCHAIN_PREFIX}gcc-ar-${_version}"
+          DOC "gcc provided wrapper for ar which adds the --plugin option"
+        )
+
+        find_program(GCC_RANLIB NAMES
+          "${TOOLCHAIN_PREFIX}gcc-ranlib"
+          "${TOOLCHAIN_PREFIX}gcc-ranlib-${_version}"
+          DOC "gcc provided wrapper for ranlib which adds the --plugin option"
+        )
+
+        mark_as_advanced( GCC_AR GCC_RANLIB )
+
+        # Override standard ar and ranlib with the gcc- versions
+        if( GCC_AR )
+          set( CMAKE_AR ${GCC_AR} )
+        endif()
+        if( GCC_RANLIB )
+          set( CMAKE_RANLIB ${GCC_RANLIB} )
+        endif()
+
+        try_c_cxx_flag( NO_FAT_LTO_OBJECTS "-fno-fat-lto-objects" )
+      else()
+        try_c_cxx_flag( FAT_LTO_OBJECTS "-ffat-lto-objects" )
       endif()
-
-      find_program(GCC_AR NAMES
-        "${TOOLCHAIN_PREFIX}gcc-ar"
-        "${TOOLCHAIN_PREFIX}gcc-ar-${_version}"
-        DOC "gcc provided wrapper for ar which adds the --plugin option"
-      )
-
-      find_program(GCC_RANLIB NAMES
-        "${TOOLCHAIN_PREFIX}gcc-ranlib"
-        "${TOOLCHAIN_PREFIX}gcc-ranlib-${_version}"
-        DOC "gcc provided wrapper for ranlib which adds the --plugin option"
-      )
-
-      mark_as_advanced( GCC_AR GCC_RANLIB )
-
-      # Override standard ar and ranlib with the gcc- versions
-      if( GCC_AR )
-        set( CMAKE_AR ${GCC_AR} )
-      endif()
-      if( GCC_RANLIB )
-        set( CMAKE_RANLIB ${GCC_RANLIB} )
-      endif()
-
-      try_c_cxx_flag( NO_FAT_LTO_OBJECTS "-fno-fat-lto-objects" )
-    else()
-      try_c_cxx_flag( FAT_LTO_OBJECTS "-ffat-lto-objects" )
     endif()
   endif()
 
@@ -501,6 +503,11 @@ function( ADD_PRECOMPILED_HEADER Target Header )
     foreach( Def ${DirIncludeDirs} )
       set( Defs ${Defs} -I${Def} )
     endforeach()
+
+    # Specify minimum OSX version
+    if( APPLE AND CMAKE_OSX_DEPLOYMENT_TARGET )
+      set( Flags ${Flags} -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET} )
+    endif()
 
     # Compiler-specific PCH support
     if( CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
