Update Debian default rotation.

--- a/debian/configfiles/maprotation.cfg
+++ b/debian/configfiles/maprotation.cfg
@@ -10,13 +10,13 @@ rotation1
 	orion
 	parpax
 	plat23
-	spacetracks-r1
+	spacetracks
 	station15-r1
 
 	if numClients < 12 #skip-thunder
 	thunder
 	#skip-thunder
 
-	utcs
+	UTCS
 	yocto
 }
