--- a/pkg/unvanquished_src.dpkdir/configs/beacons/ammo.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/ammo.beacon.cfg
@@ -1,5 +1,5 @@
 // BCT_AMMO (implicit)
 
 text       "Ammo here!"
-icon       "gfx/2d/beacon-pointer"
+icon       "gfx/2d/beacon-ammo"
 sound      "sound/feedback/beacon.ogg"
