--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -860,7 +860,7 @@ set( GAMELIST
   ${GAMELOGIC_DIR}/game/g_client.cpp
   ${GAMELOGIC_DIR}/game/g_cmds.cpp
   ${GAMELOGIC_DIR}/game/g_combat.cpp
-  ${GAMELOGIC_DIR}/game/g_confidence.cpp
+  ${GAMELOGIC_DIR}/game/g_momentum.cpp
   ${GAMELOGIC_DIR}/game/g_entities.cpp
   ${GAMELOGIC_DIR}/game/g_physics.cpp
   ${GAMELOGIC_DIR}/game/g_buildable.cpp
