Adjust default messaging comands

--- a/main/default.cfg
+++ b/main/default.cfg
@@ -50,11 +50,9 @@ bind  .             +moveright
 // MISC
 //
 
-bind  t             messagemode
-bind  y             messagemode2
-bind  u             messagemode3
-bind  i             messagemode4
-bind  /             messagemodec
+bind  t             messagemode_public
+bind  y             messagemode_team
+bind  u             messagemode_admin
 
 bind  z             itemtoggle blaster
 bind  r             reload
