--- a/pkg/unvanquished_src.dpkdir/default.cfg
+++ b/pkg/unvanquished_src.dpkdir/default.cfg
@@ -50,9 +50,9 @@ bind  .             +moveright
 // MISC
 //
 
-bind  t             messagemode_public
-bind  y             messagemode_team
-bind  u             messagemode_admin
+bind  t             message_public
+bind  y             message_team
+bind  u             message_admin
 
 bind  z             itemtoggle blaster
 bind  r             reload
