Add default bind for grenade and tutorial text. Remove tutorial text for weapnext/prev

--- a/main/default.cfg
+++ b/main/default.cfg
@@ -16,6 +16,7 @@ bind  mwheelup      weapprev
 bind  mwheeldown    weapnext
 bind  ENTER         +useitem
 bind  MOUSE3        +useitem
+bind  g             itemact grenade
 
 //
 // CHARACTER CONTROLS
