--- a/pkg/unvanquished_src.dpkdir/default.cfg
+++ b/pkg/unvanquished_src.dpkdir/default.cfg
@@ -16,6 +16,7 @@ bind  mwheelup      weapprev
 bind  mwheeldown    weapnext
 bind  ENTER         +useitem
 bind  MOUSE3        +useitem
+bind  g             itemact grenade
 
 //
 // CHARACTER CONTROLS
