Default bindlist: g->grenade (+rally was just +taunt)

--- a/main/default.cfg
+++ b/main/default.cfg
@@ -58,10 +58,10 @@ bind  u             message_admin
 bind  z             itemtoggle blaster
 bind  r             reload
 bind  m             "itemact medkit"
+bind  g             "itemact grenade"
 bind  q             +activate
 bind  e             modcase alt "/deconstruct marked" /deconstruct
 bind  f             +taunt
-bind  g             +rally
 bind  h             scoresUp
 bind  n             scoresDown
 bind  o             menu vsay_top
