default.cfg key correction: screenshot modcase order

--- a/main/default.cfg
+++ b/main/default.cfg
@@ -88,4 +88,4 @@ bind  F4            "teamvote no"
 //
 //  DEVELOPER KEYS
 //
-bind  F11           modcase shift /screenshotJPEG /screenshotPNG
+bind  F11           modcase shift /screenshotPNG /screenshotJPEG
