--- a/archlinux/configs/maprotation.cfg
+++ b/archlinux/configs/maprotation.cfg
@@ -1,35 +1,13 @@
-newmaps
+rotation1
 {
 	chasm
 	parpax
 	perseus
 	plat23
 	spacetracks
+	station15
 	if numClients < 12 #skip-thunder
 		thunder
 	#skip-thunder
-	yocto
-}
-
-allmaps
-{
-	arachnid2
-	chasm
-	karith
-	methane-beta1
-	nano
-	nexus6
-	niveus
-	orion
-	parpax
-	perseus
-	plat23
-	spacetracks
-	station15-r1
-	if numClients < 12 #skip-thunder
-		thunder
-	#skip-thunder
-	tremor
-	UTCS
 	yocto
 }
