--- a/archlinux/configs/server.cfg
+++ b/archlinux/configs/server.cfg
@@ -34,9 +34,8 @@ set sv_wwwBaseURL                 "www.unvanquished.net/downloads/pkg"
 // map rotation
 // ------------
 
-// "newmaps" contains only maps made for Unvanquished, "allmaps" contains
-// additional placeholder maps inherited from Tremulous.
-set g_initialMapRotation          "newmaps"
+// Name of the first map rotation to use.
+set g_initialMapRotation          "rotation1"
 
 // The first map must be loaded explicitly. This must be the last command.
 map plat23
