--- a/debian/configfiles/maprotation.cfg
+++ b/debian/configfiles/maprotation.cfg
@@ -1,22 +1,13 @@
 rotation1
 {
-	arachnid2
 	chasm
-	karith
-	methane-beta1
-	nano
-	nexus6
-	niveus
-	orion
 	parpax
+	perseus
 	plat23
 	spacetracks
-	station15-r1
-
+	station15
 	if numClients < 12 #skip-thunder
-	thunder
+		thunder
 	#skip-thunder
-
-	UTCS
 	yocto
 }
