--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
   - clang
 
 install:
-  - sudo sh -c 'echo deb http://debs.unvanquished.net precise main >>/etc/apt/sources.list'
+  - sudo sh -c 'echo deb http://unv-debs.moreofthesa.me.uk precise main >>/etc/apt/sources.list'
   - sudo apt-key adv --keyserver x-hkp://pool.sks-keyservers.net --recv-key 06AF4C14
   - sudo apt-get -qq update
   - sudo apt-get -qq install libwebp-dev libglew-dev libgmp-dev libjpeg8-dev libcurl4-gnutls-dev libfreetype6-dev libgeoip-dev libncursesw5-dev libogg-dev libopenal-dev libpng-dev libsdl1.2-dev libspeexdsp-dev libtheora-dev libvorbis-dev libopusfile-dev libxvidcore-dev nettle-dev zlib1g-dev
