--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
 
 script:
   - sed -i 's/POSITION_INDEPENDENT_CODE 1/COMPILE_FLAGS "-fPIC"/' CMakeLists.txt
-  - mkdir build
+  - mkdir -p build
   - cd build
   - CXXFLAGS="-D__extern_always_inline=inline" cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_SDL2=OFF ..
   - cmake --build .
