--- a/pkg/unvanquished_src.dpkdir/configs/beacons/defend.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/defend.beacon.cfg
@@ -1,7 +1,7 @@
 // BCT_DEFEND
 
 humanName  "Defend"
-text       "Defend!"
-icon       "gfx/2d/beacon-defend"
+text       0 "Defend!"
+icon       0 "gfx/2d/beacon-defend"
 sound      "sound/feedback/beacon.ogg"
 decayTime  10000
