--- a/pkg/unvanquished_src.dpkdir/configs/beacons/enemy.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/enemy.beacon.cfg
@@ -1,7 +1,7 @@
 // BCT_ENEMY
 
 humanName  "Spot an enemy"
-text       "Enemy spotted!"
-icon       "gfx/2d/beacon-enemy"
+text       0 "Enemy spotted!"
+icon       0 "gfx/2d/beacon-enemy"
 sound      "sound/feedback/beacon.ogg"
 decayTime  3000
