--- a/pkg/unvanquished_src.dpkdir/configs/beacons/health.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/health.beacon.cfg
@@ -1,6 +1,6 @@
 // BCT_HEALTH
 
 text       "Heal here!"
-icon       "gfx/2d/beacon-health"
-altIcon    "gfx/2d/beacon-health-alt"
+icon       0 "gfx/2d/beacon-health"
+icon       1 "gfx/2d/beacon-health-alt"
 sound      "sound/feedback/beacon.ogg"
