--- a/main/configs/beacons/repair.beacon.cfg
+++ b/main/configs/beacons/repair.beacon.cfg
@@ -1,7 +1,7 @@
 // BCT_REPAIR
 
 humanName  "Repair"
-text       "Repair!"
-icon       "gfx/2d/beacon-repair"
+text       0 "Repair!"
+icon       0 "gfx/2d/beacon-repair"
 sound      "sound/feedback/beacon.ogg"
 decayTime  6500
