--- a/main/configs/beacons/ammo.beacon.cfg
+++ b/main/configs/beacons/ammo.beacon.cfg
@@ -1,5 +1,5 @@
 // BCT_AMMO (implicit)
 
-text       "Ammo here!"
-icon       "gfx/2d/beacon-ammo"
+text       0 "Ammo here!"
+icon       0 "gfx/2d/beacon-ammo"
 sound      "sound/feedback/beacon.ogg"
