--- a/main/configs/beacons/attack.beacon.cfg
+++ b/main/configs/beacons/attack.beacon.cfg
@@ -1,7 +1,7 @@
 // BCT_ATTACK
 
 humanName  "Attack"
-text       "Attack!"
-icon       "gfx/2d/beacon-attack"
+text       0 "Attack!"
+icon       0 "gfx/2d/beacon-attack"
 sound      "sound/feedback/beacon.ogg"
 decayTime  10000
