--- a/main/configs/beacons/base.beacon.cfg
+++ b/main/configs/beacons/base.beacon.cfg
@@ -1,6 +1,12 @@
 // BCT_BASE
 
 humanName  "Base"
-text       "Base"
-icon       "gfx/2d/beacon-base"
+text       0 "Base"
+text       1 "Outpost"
+text       2 "Enemy base"
+text       3 "Enemy outpost"
+icon       0 "gfx/2d/beacon-base"
+icon       1 "gfx/2d/beacon-outpost"
+icon       2 "gfx/2d/beacon-base-enemy"
+icon       3 "gfx/2d/beacon-outpost-enemy"
 sound      "sound/feedback/beacon.ogg"
