--- a/main/configs/beacons/pointer.beacon.cfg
+++ b/main/configs/beacons/pointer.beacon.cfg
@@ -1,7 +1,7 @@
 // BCT_POINTER
 
 humanName  "Pointer"
-text       "Look!"
-icon       "gfx/2d/beacon-pointer"
+text       0 "Look!"
+icon       0 "gfx/2d/beacon-pointer"
 sound      "sound/feedback/beacon.ogg"
 decayTime  2000
