--- a/main/configs/beacons/timer.beacon.cfg
+++ b/main/configs/beacons/timer.beacon.cfg
@@ -1,6 +1,6 @@
 // BCT_TIMER
 
 humanName  "Timer"
-text       "Timer"
-icon       "gfx/2d/beacon-timer"
+text       0 "Timer"
+icon       0 "gfx/2d/beacon-timer"
 sound      "sound/feedback/beacon.ogg"
