--- a/pkg/unvanquished_src.dpkdir/configs/beacons/health.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/health.beacon.cfg
@@ -1,6 +1,7 @@
 // BCT_HEALTH
 
-text       "Heal here!"
+text       0 "Heal here!"
+text       1 "Heal here!"
 icon       0 "gfx/2d/beacon-health"
 icon       1 "gfx/2d/beacon-health-alt"
 sound      "sound/feedback/beacon.ogg"
