--- a/pkg/unvanquished_src.dpkdir/configs/beacons/attack.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/attack.beacon.cfg
@@ -1,6 +1,8 @@
 // BCT_ATTACK
 
 humanName  "Attack"
+desc       "Tell your team to attack a specific place."
+
 text       0 "Attack!"
 icon       0 "gfx/2d/beacon-attack"
 sound      "sound/feedback/beacon.ogg"
