--- a/pkg/unvanquished_src.dpkdir/configs/beacons/defend.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/defend.beacon.cfg
@@ -1,6 +1,8 @@
 // BCT_DEFEND
 
 humanName  "Defend"
+desc       "Inform your teammates of an enemy assault."
+
 text       0 "Defend!"
 icon       0 "gfx/2d/beacon-defend"
 sound      "sound/feedback/beacon.ogg"
