--- a/pkg/unvanquished_src.dpkdir/configs/beacons/timer.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/timer.beacon.cfg
@@ -1,6 +1,8 @@
 // BCT_TIMER
 
 humanName  "Timer"
+desc       "Synchronize a move with your teammates."
+
 text       0 "Timer"
 icon       0 "gfx/2d/beacon-timer"
 sound      "sound/feedback/beacon.ogg"
