--- a/main/configs/beacons/enemy.beacon.cfg
+++ b/main/configs/beacons/enemy.beacon.cfg
@@ -1,6 +1,8 @@
 // BCT_ENEMY
 
 humanName  "Spot an enemy"
+desc       "Spot an enemy (figure out a better description...)"
+
 text       0 "Enemy spotted!"
 icon       0 "gfx/2d/beacon-enemy"
 sound      "sound/feedback/beacon.ogg"
