--- a/main/configs/beacons/repair.beacon.cfg
+++ b/main/configs/beacons/repair.beacon.cfg
@@ -1,6 +1,8 @@
 // BCT_REPAIR
 
 humanName  "Repair"
+desc       "Inform your team's builders of a building needing repairs."
+
 text       0 "Repair!"
 icon       0 "gfx/2d/beacon-repair"
 sound      "sound/feedback/beacon.ogg"
