--- a/main/configs/beacons/tag.beacon.cfg
+++ b/main/configs/beacons/tag.beacon.cfg
@@ -1,4 +1,7 @@
 // BCT_TAG
 
 humanName  "Tag"
+desc       "Point at a buildable or a player and tag them. Tagged players can be tracked (even through walls) for a short period of time. Tagging an enemy building reveals the base or outpost it belongs to and marks it."
+
+icon       0 "gfx/2d/beacon"
 sound      "sound/feedback/beacon.ogg"
