--- a/main/configs/beacons/pointer.beacon.cfg
+++ b/main/configs/beacons/pointer.beacon.cfg
@@ -1,6 +1,8 @@
 // BCT_POINTER
 
 humanName  "Pointer"
+desc       "Attract teammates' attention to a very specific point."
+
 text       0 "Look!"
 icon       0 "gfx/2d/beacon-pointer"
 sound      "sound/feedback/beacon.ogg"
