--- a/pkg/unvanquished_src.dpkdir/ui/in-game/beacons.cfg
+++ b/pkg/unvanquished_src.dpkdir/ui/in-game/beacons.cfg
@@ -1,9 +1,9 @@
 fadeIn            200
 fadeOut           500
 highlightRadius   0.08
-highlightScale    1.2
 fadeDistance      500
-fadeMinAlpha      0.5
+fadeMinAlpha      0.4
+fadeMaxAlpha      1.0
 
 colorNeutral      1.0  1.0  1.0  1.0
 colorAlien        1.0  0.5  0.5  1.0
@@ -15,7 +15,7 @@ arrowAlphaHigh    0.03
 
 hudSize           1
 hudMinSize        0.025
-hudMaxSize        0.05
+hudMaxSize        1 //0.05
 hudMargin         0.14
 
 minimapScale      1
