Move cg_beacon* cvars to beacons config.

--- a/main/ui/in-game/beacons.cfg
+++ b/main/ui/in-game/beacons.cfg
@@ -15,7 +15,9 @@ arrowAlphaHigh    0.03
 
 hudSize           1
 hudMinSize        0.025
-hudMaxSize        1 //0.05
+hudMaxSize        1
+hudAlpha          0.35
 hudMargin         0.14
 
 minimapScale      1
+minimapAlpha      1
