--- a/main/configs/beacons/defend.beacon.cfg
+++ b/main/configs/beacons/defend.beacon.cfg
@@ -5,5 +5,6 @@ desc       "Inform your teammates of an enemy assault."
 
 text       0 "Defend!"
 icon       0 "gfx/2d/beacon-defend"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
 decayTime  10000
