--- a/main/configs/beacons/enemy.beacon.cfg
+++ b/main/configs/beacons/enemy.beacon.cfg
@@ -5,5 +5,6 @@ desc       "Spot an enemy (figure out a better description...)"
 
 text       0 "Enemy spotted!"
 icon       0 "gfx/2d/beacon-enemy"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
 decayTime  3000
