--- a/main/configs/beacons/attack.beacon.cfg
+++ b/main/configs/beacons/attack.beacon.cfg
@@ -5,5 +5,6 @@ desc       "Tell your team to attack a specific place."
 
 text       0 "Attack!"
 icon       0 "gfx/2d/beacon-attack"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
 decayTime  10000
