--- a/pkg/unvanquished_src.dpkdir/configs/beacons/ammo.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/ammo.beacon.cfg
@@ -2,4 +2,5 @@
 
 text       0 "Ammo here!"
 icon       0 "gfx/2d/beacon-ammo"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
