--- a/pkg/unvanquished_src.dpkdir/configs/beacons/base.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/base.beacon.cfg
@@ -8,4 +8,5 @@ icon       0 "gfx/2d/beacon-base"
 icon       1 "gfx/2d/beacon-outpost"
 icon       2 "gfx/2d/beacon-base-enemy"
 icon       3 "gfx/2d/beacon-outpost-enemy"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
