--- a/pkg/unvanquished_src.dpkdir/configs/beacons/pointer.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/pointer.beacon.cfg
@@ -5,5 +5,6 @@ desc       "Attract teammates' attention to a very specific point."
 
 text       0 "Look!"
 icon       0 "gfx/2d/beacon-pointer"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
 decayTime  2000
