--- a/pkg/unvanquished_src.dpkdir/configs/beacons/timer.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/timer.beacon.cfg
@@ -5,4 +5,5 @@ desc       "Synchronize a move with your teammates."
 
 text       0 "Timer"
 icon       0 "gfx/2d/beacon-timer"
-sound      "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon.ogg"
+outSound   "sound/feedback/beacon-target-lost.ogg"
