--- a/pkg/unvanquished_src.dpkdir/configs/beacons/tag.beacon.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/beacons/tag.beacon.cfg
@@ -4,5 +4,5 @@ humanName  "Tag"
 desc       "Point at a buildable or a player and tag them. Tagged players can be tracked (even through walls) for a short period of time. Tagging an enemy building reveals the base or outpost it belongs to and marks it."
 
 icon       0 "gfx/2d/beacon"
-inSound    "sound/feedback/beacon.ogg"
+inSound    "sound/feedback/beacon-tag.ogg"
 outSound   "sound/feedback/beacon-target-lost.ogg"
