--- a/main/configs/weapon/shotgun.attr.cfg
+++ b/main/configs/weapon/shotgun.attr.cfg
@@ -22,3 +22,5 @@ pellets 11 // used to sync server and client side
 spread 790
 damage 5
 range 98304 // ( 8192 * 12 )
+recoil 30
+maxRecoilAngle 40
