Apply recoil after firing. Improve recoil settings for all weapons.

--- a/main/configs/weapon/shotgun.attr.cfg
+++ b/main/configs/weapon/shotgun.attr.cfg
@@ -22,5 +22,4 @@ pellets 11 // used to sync server and client side
 spread 790
 damage 5
 range 98304 // ( 8192 * 12 )
-recoil 30
-maxRecoilAngle 40
+recoil 110 1.0 0.0 20 -
