--- a/main/configs/weapon/lcannon.attr.cfg
+++ b/main/configs/weapon/lcannon.attr.cfg
@@ -24,8 +24,7 @@ damage 265
 radius 150 // primary splash damage radius
 size 5 // missile bounding box radius
 speed 700
-recoil 30
-maxRecoilAngle 20
+recoil 160 1.0 0.0 15 -
 
 secondaryDamage 30
 secondaryRadius 75 // secondary splash damage radius
